# mcp

clase10/github-mcp-server/: .gitignore  README.md  pyproject.toml
clase10/github-mcp-server/src/mi_server/: .gitignore  pyproject.toml  server.py
clase3/: README.md  docker-compose.yml  dockerfile  requirements.txt
clase4/mcp-server-demo/: README.md  pyproject.toml  server.py
clase5/: client.py
clase6/: .gitignore  README.md  client.py  server.py
clase7/: README.md  server.py
clase8/: README.md
clase8/calculadora-mcp/: README.md  pyproject.toml
clase8/calculadora-mcp/.aitk/: mcp.json
clase8/calculadora-mcp/inspector/: .inspector.json  package.json
clase8/calculadora-mcp/src/: server.py
clase9/: README.md
