[project]
name = "mcp-calculator-server"
version = "0.1.0"
description = "Un servidor MCP básico para operaciones matemáticas"
dependencies = [
    "mcp",
    "fastmcp",
]
requires-python = ">=3.10"

[project.scripts]
# Esto crea un comando ejecutable llamado 'mcp-calc'
mcp-calc = "mi_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"